[project]
name = "raid-helper-calendar"
version = "0.1.0"
description = "Raid Helper calendar aggregator with Streamlit interface"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "pytz>=2023.3"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "raid_helper_api", "event_processor", "config", "utils", "types"]
